--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -13,11 +13,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.12'
-
+        
     - name: Install dependencies
       run: |
         cd server
