--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.12'
-        
+
     - name: Install dependencies
       run: |
         cd server
@@ -48,11 +48,11 @@ jobs:
         AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       run: |
-        docker tag lokamspace-backend:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com.dkr.ecr.us-east-1.amazonaws.com/lokamspace/backend
+        docker tag lokamspace-backend:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/lokamspace-backend
 
     - name: Push Docker image to ECR
       env:
         AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       run: |
-        docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com.dkr.ecr.us-east-1.amazonaws.com/lokamspace/backend
+        docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/lokamspace-backend
