--- a/agents/GarageBot/requirements.txt
+++ b/agents/GarageBot/requirements.txt
@@ -9,7 +9,8 @@
 
 # python 3.10.11
 
-livekit-agents[openai,silero,elevenlabs,deepgram,noise_cancellation]==1.0.11
+livekit-agents[openai,silero,elevenlabs,deepgram]==1.0.11
+livekit-plugins-noise-cancellation~=0.2
 fastapi==0.115.8
 uvicorn==0.34.0
 python-dotenv==1.0.1
