--- a/agents/GarageBot/requirements.txt
+++ b/agents/GarageBot/requirements.txt
@@ -9,7 +9,7 @@
 
 # python 3.10.11
 
-livekit-agents[openai,silero,elevenlabs,deepgram]==1.0.11
+livekit-agents[openai,silero,elevenlabs,deepgram,cartesia]==1.0.11
 livekit-plugins-noise-cancellation~=0.2
 fastapi==0.115.8
 uvicorn==0.34.0
