--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,23 +1,30 @@
-alembic==1.13.1
+alembic==1.12.1
 annotated-types==0.6.0
 anyio==4.2.0
 bcrypt==4.1.2
 click==8.1.7
-fastapi==0.109.2
+fastapi==0.104.1
 h11==0.14.0
 idna==3.6
 Mako==1.3.2
 MarkupSafe==2.1.5
-passlib==1.7.4
+passlib[bcrypt]==1.7.4
 psycopg2-binary==2.9.9
-pydantic==2.6.1
+pydantic==2.5.2
 pydantic-core==2.16.2
 PyJWT==2.8.0
-python-dotenv==1.0.1
-python-multipart==0.0.9
+python-dotenv==1.0.0
+python-multipart==0.0.6
 sniffio==1.3.0
-SQLAlchemy==2.0.25
+SQLAlchemy==2.0.23
 starlette==0.36.3
 typing_extensions==4.9.0
-uvicorn==0.27.1
-python-jose==3.3.0
+uvicorn==0.24.0
+python-jose[cryptography]==3.3.0
+pydantic-settings==2.1.0
+email-validator==2.1.0.post1
+aiosmtplib==2.0.2
+jinja2==3.1.2
+python-slugify==8.0.1
+boto3==1.29.3
+requests==2.31.0
