--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,30 +1,94 @@
-alembic==1.12.1
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.9
+aiosignal==1.3.2
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.2.0
+attrs==25.3.0
+av==14.4.0
 bcrypt==4.1.2
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.1.7
-fastapi==0.104.1
+colorama==0.4.6
+coloredlogs==15.0.1
+distro==1.9.0
+docstring_parser==0.16
+ecdsa==0.19.1
+eval_type_backport==0.2.2
+fastapi==0.109.2
+filelock==3.18.0
+flatbuffers==25.2.10
+frozenlist==1.6.2
+fsspec==2025.5.1
 h11==0.14.0
+hf-xet==1.1.3
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.32.4
+humanfriendly==10.0
 idna==3.6
+Jinja2==3.1.6
+jiter==0.10.0
+livekit==1.0.8
+livekit-agents==1.0.23
+livekit-api==1.0.2
+livekit-plugins-cartesia==1.0.23
+livekit-plugins-deepgram==1.0.23
+livekit-plugins-noise-cancellation==0.2.4
+livekit-plugins-openai==1.0.23
+livekit-plugins-silero==1.0.23
+livekit-plugins-turn-detector==1.0.23
+livekit-protocol==1.0.3
 Mako==1.3.2
 MarkupSafe==2.1.5
-passlib[bcrypt]==1.7.4
+mpmath==1.3.0
+multidict==6.4.4
+mypy_extensions==1.1.0
+nest-asyncio==1.6.0
+numpy==2.2.6
+onnxruntime==1.22.0
+openai==1.84.0
+packaging==25.0
+passlib==1.7.4
+pillow==11.2.1
+propcache==0.3.1
+protobuf==6.31.1
+psutil==7.0.0
 psycopg2-binary==2.9.9
-pydantic==2.5.2
-pydantic-core==2.16.2
-PyJWT==2.8.0
-python-dotenv==1.0.0
-python-multipart==0.0.6
-sniffio==1.3.0
-SQLAlchemy==2.0.23
-starlette==0.36.3
-typing_extensions==4.9.0
-uvicorn==0.24.0
-python-jose[cryptography]==3.3.0
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.6.1
 pydantic-settings==2.1.0
-email-validator==2.1.0.post1
-aiosmtplib==2.0.2
-jinja2==3.1.2
-python-slugify==8.0.1
-boto3==1.29.3
-requests==2.31.0
+pydantic_core==2.16.2
+PyJWT==2.8.0
+python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.9
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rsa==4.9.1
+safetensors==0.5.3
+six==1.17.0
+sniffio==1.3.0
+sounddevice==0.5.2
+SQLAlchemy==2.0.25
+starlette==0.36.3
+sympy==1.14.0
+tokenizers==0.21.1
+tqdm==4.67.1
+transformers==4.52.4
+types-protobuf==4.25.0.20240417
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.9.0
+urllib3==2.4.0
+uvicorn==0.27.1
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
+yarl==1.20.0
