--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -53,7 +53,7 @@ pillow==11.2.1
 propcache==0.3.1
 protobuf==6.31.1
 psutil==7.0.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.11.5
 pydantic-settings==2.9.1
