--- a/garage-bot/Dockerfile
+++ b/garage-bot/Dockerfile
@@ -24,8 +24,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY agent.py .
-COPY outbound-trunk.json .
+COPY . .
 
 # Set default environment variables (can be overridden at runtime)
 ENV LIVEKIT_URL="" \
