--- a/garage-bot/requirements.txt
+++ b/garage-bot/requirements.txt
@@ -50,6 +50,7 @@ pillow==11.2.1
 propcache==0.3.1
 protobuf==6.31.1
 psutil==7.0.0
+psycopg2==2.9.10
 pycparser==2.22
 pydantic==2.11.5
 pydantic_core==2.33.2
@@ -61,6 +62,7 @@ requests==2.32.3
 safetensors==0.5.3
 sniffio==1.3.1
 sounddevice==0.5.2
+SQLAlchemy==2.0.41
 sympy==1.14.0
 tokenizers==0.21.1
 tqdm==4.67.1
