Fixing AI Agent

--- a/garage-bot/Dockerfile
+++ b/garage-bot/Dockerfile
@@ -1,7 +1,7 @@
 # Use Python 3.12 slim as base image for better compatibility with dependencies
 FROM python:3.12-slim
 
-# Set environment variables
+# Set environment variables for Python
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=1
@@ -15,13 +15,16 @@ RUN apt-get update && apt-get install -y \
     portaudio19-dev \
     python3-dev \
     gcc \
+    g++ \
+    make \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements file
 COPY requirements.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
@@ -29,17 +32,8 @@ COPY . .
 # Download required models
 RUN python agent.py download-files
 
-# Set default environment variables (can be overridden at runtime)
-ENV LIVEKIT_URL="" \
-    LIVEKIT_API_KEY="" \
-    LIVEKIT_API_SECRET="" \
-    SIP_OUTBOUND_TRUNK_ID="" \
-    DATABASE_URL="" \
-    OPENAI_API_KEY="" \
-    ELEVEN_API_KEY="" \
-    DEEPGRAM_API_KEY="" \
-    CARTESIA_API_KEY="" \
-    MODEL_NAME="gpt-4-mini"
+# Set non-sensitive environment variables
+ENV MODEL_NAME="gpt-4-mini"
 
 # Run the agent in dev mode
 CMD ["python", "agent.py", "dev"]
