--- a/agents/GarageBot/requirements.txt
+++ b/agents/GarageBot/requirements.txt
@@ -5,7 +5,7 @@ aiohttp==3.12.7
 aiosignal==1.3.2
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-anyio==4.9.0
+anyio>=3.7.1,<4.0.0
 asyncio==3.4.3
 asyncpg==0.29.0
 attrs==25.3.0
