--- a/agents/GarageBot/requirements.txt
+++ b/agents/GarageBot/requirements.txt
@@ -95,7 +95,7 @@ six==1.17.0
 sniffio==1.3.1
 sounddevice==0.5.2
 SQLAlchemy==2.0.41
-starlette==0.46.2
+starlette>=0.27.0,<0.28.0
 sympy==1.14.0
 tenacity==9.1.2
 tokenizers==0.21.1
