--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,21 +4,21 @@ anyio>=3.7.1,<4.0.0
 bcrypt==4.1.2
 click==8.1.7
 fastapi==0.104.1
-h11==0.14.0
+h11>=0.16.0
 idna==3.6
 Mako==1.3.2
 MarkupSafe==2.1.5
 passlib[bcrypt]==1.7.4
 psycopg2-binary==2.9.9
-pydantic==2.5.2
-pydantic-core==2.16.2
+pydantic>=2.6.0
+pydantic-core>=2.18.2,<3.0.0
 PyJWT==2.8.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 sniffio==1.3.0
 SQLAlchemy==2.0.23
-starlette==0.36.3
-typing_extensions==4.9.0
+starlette>=0.27.0,<0.28.0
+typing-extensions>=4.12.0,<5.0.0
 uvicorn==0.24.0
 python-jose[cryptography]==3.3.0
 pydantic-settings==2.1.0
@@ -28,3 +28,5 @@ jinja2==3.1.2
 python-slugify==8.0.1
 boto3==1.29.3
 requests==2.31.0
+livekit-agents>=1.0.23
+livekit-plugins-turn-detector>=1.0.23
