Added new database structure Removed unwanted files Updated new env

--- a/server/env.example
+++ b/server/env.example
@@ -9,3 +9,9 @@ DB_PASSWORD=****
 DB_HOST=****
 DB_PORT=5432
 DB_NAME=autopulse
+JWT_SECRET_KEY=****
+JWT_ALGORITHM=****
+ACCESS_TOKEN_EXPIRE_MINUTES=****
+APP_TITLE=****
+APP_DESCRIPTION=****
+DEBUG=FALSE
