--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -51,6 +51,7 @@ pydantic-settings==2.9.1
 pydantic_core==2.33.2
 PyJWT==2.10.1
 python-dotenv==1.1.0
+python-jose==3.3.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 regex==2024.11.6
