Added slack notifier

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -65,3 +65,16 @@ jobs:
       run: |
         docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPO_NAME:latest
 
+    - name: Notify Slack
+      run: |
+        if [ "$ENVIRONMENT" = "prod" ]; then
+          SLACK_URL=${{ secrets.SLACK_WEBHOOK_UR }}
+          STATUS_MSG="✅ *Production deployment completed successfully!*"
+        else
+          SLACK_URL=${{ secrets.SLACK_WEBHOOK_URL }}
+          STATUS_MSG="✅ *Development deployment completed successfully!*"
+        fi
+
+        curl -X POST -H 'Content-type: application/json' \
+          --data "{\"text\": \"$STATUS_MSG\nRepository: $REPO_NAME\nEnvironment: $ENVIRONMENT\nBranch: ${{ github.ref_name }}\"}" \
+          $SLACK_URL
