--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -67,6 +67,7 @@ jobs:
 
     - name: Notify Slack
       run: |
+        COMMIT_MSG=$(git log -1 --pretty=%B)
         if [ "$ENVIRONMENT" = "prod" ]; then
           SLACK_URL=${{ secrets.SLACK_WEBHOOK_UR }}
           STATUS_MSG="✅ *Backend Production deployment completed successfully!*"
