--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -40,7 +40,9 @@ numpy==2.3.0
 onnxruntime==1.22.0
 openai==1.84.0
 packaging==25.0
+pandas==2.3.0
 passlib==1.7.4
+phonenumbers==9.0.7
 pillow==11.2.1
 propcache==0.3.1
 protobuf==6.31.1
