--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -89,7 +89,7 @@ jobs:
         fi
           
         if [ "$ENVIRONMENT" = "prod" ]; then
-          SLACK_URL=${{ secrets.SLACK_WEBHOOK_UR }}
+          SLACK_URL=${{ secrets.SLACK_WEBHOOK_URL }}
           STATUS_MSG="✅ *Production deployment completed successfully!*"
         else
           SLACK_URL=${{ secrets.SLACK_WEBHOOK_URL }}
