--- a/amplify.yml
+++ b/amplify.yml
@@ -1,19 +1,30 @@
-version: 1
-applications:
-  - frontend:
-      phases:
-        preBuild:
-          commands:
-            - npm ci --cache .npm --prefer-offline
-        build:
-          commands:
-            - npm run build
-      artifacts:
-        baseDirectory: .next
-        files:
-          - '**/*'
-      cache:
-        paths:
-          - .next/cache/**/*
-          - .npm/**/*
-    appRoot: client
+   version: 1
+   applications:
+     - frontend:
+         phases:
+           preBuild:
+             commands:
+               - nvm use 18
+               - node -v
+               - cd client
+               - npm ci --cache .npm --prefer-offline
+           build:
+             commands:
+               - npm run build
+               # Create a simple manifest file that Amplify expects
+               - |
+                 echo '{
+                   "files": {
+                     "index.html": "/index.html",
+                     "assets/*": "/assets/*"
+                   }
+                 }' > dist/deploy-manifest.json
+         artifacts:
+           baseDirectory: client/dist
+           files:
+             - '**/*'
+           discard-paths: no
+         cache:
+           paths:
+             - client/node_modules/**/*
+             - client/.npm/**/*
