--- a/amplify.yml
+++ b/amplify.yml
@@ -1,30 +1,30 @@
-   version: 1
-   applications:
-     - frontend:
-         phases:
-           preBuild:
-             commands:
-               - nvm use 18
-               - node -v
-               - cd client
-               - npm ci --cache .npm --prefer-offline
-           build:
-             commands:
-               - npm run build
-               # Create a simple manifest file that Amplify expects
-               - |
-                 echo '{
-                   "files": {
-                     "index.html": "/index.html",
-                     "assets/*": "/assets/*"
-                   }
-                 }' > dist/deploy-manifest.json
-         artifacts:
-           baseDirectory: client/dist
-           files:
-             - '**/*'
-           discard-paths: no
-         cache:
-           paths:
-             - client/node_modules/**/*
-             - client/.npm/**/*
+version: 1
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - nvm use 18
+        - node -v
+        - cd client
+        - npm ci --cache .npm --prefer-offline
+    build:
+      commands:
+        - npm run build
+        - |
+          echo '{
+            "files": {
+              "index.html": "/index.html",
+              "assets/*": "/assets/*"
+            }
+          }' > dist/deploy-manifest.json
+        - ls -la dist/
+        - cat dist/deploy-manifest.json
+  artifacts:
+    baseDirectory: client/dist
+    files:
+      - '**/*'
+    discard-paths: no
+  cache:
+    paths:
+      - client/node_modules/**/*
+      - client/.npm/**/*
