--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,10 @@
 # Database Configuration
 # Using port 5433 to avoid conflicts with existing PostgreSQL installations
-POSTGRES_HOST=<your_postgres_host>
-POSTGRES_PORT=<your_postgres_port>
-POSTGRES_USER=<your_postgres_user>
-POSTGRES_PASSWORD=<your_postgres_password>
-POSTGRES_DB=<your_postgres_db>
+DB_HOST=<your_DB_HOST>
+DB_PORT=<your_DB_PORT>
+DB_USER=<your_DB_USER>
+DB_PASSWORD=<your_DB_PASSWORD>
+DB_NAME=<your_DB_NAME>
 
 # Application Settings
 ENV=<your_environment>
