--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     volumes:
       - .:/app
     environment:
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
-      - POSTGRES_USER=autopulse
-      - POSTGRES_PASSWORD=autopulse
-      - POSTGRES_DB=autopulse
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=autopulse
+      - DB_PASSWORD=autopulse
+      - DB_NAME=autopulse
       - ENVIRONMENT=development
       - LOG_LEVEL=debug
       - SECRET_KEY=dev_secret_key_replace_in_production
@@ -22,18 +22,18 @@ services:
       - JWT_EXPIRATION=86400
     depends_on:
       - db
-    command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8002
+    command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
 
-  db:
-    image: postgres:15
-    ports:
-      - "5433:5432"
-    environment:
-      - POSTGRES_USER=autopulse
-      - POSTGRES_PASSWORD=autopulse
-      - POSTGRES_DB=autopulse
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+  # db:
+  #   image: postgres:15
+  #   ports:
+  #     - "5433:5432"
+  #   environment:
+  #     - DB_USER=autopulse
+  #     - DB_PASSWORD=autopulse
+  #     - DB_NAME=autopulse
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
