--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -23,4 +23,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Run migrations and start application
-CMD alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000 
+CMD ["sh", "-c", "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"] 
