--- a/server/.env.example
+++ b/server/.env.example
@@ -1,31 +1,31 @@
 # Database Configuration
-# Using port 5433 to avoid conflicts with existing PostgreSQL installations
-DB_HOST=<your_DB_HOST>
-DB_PORT=<your_DB_PORT>
-DB_USER=<your_DB_USER>
-DB_PASSWORD=<your_DB_PASSWORD>
-DB_NAME=<your_DB_NAME>
+DB_HOST=<YOUR_DB_HOST>
+DB_PORT=<YOUR_DB_PORT>
+DB_USER=<YOUR_DB_USER>
+DB_PASSWORD=<YOUR_DB_PASSWORD>
+DB_NAME=<YOUR_DB_NAME>
 
 # Application Settings
-ENV=<your_environment>
-DEBUG=<your_debug_setting>
-LOG_LEVEL=<your_log_level>
+ENV=<development|production>
+DEBUG=<true|false>
+LOG_LEVEL=<LOG_LEVEL>
 
 # Security
-SECRET_KEY=<your_secret_key>
-CORS_ORIGINS=<your_cors_origins>
+SECRET_KEY=<SECRET_KEY>
+CORS_ORIGINS=<ALLOWED_ORIGINS> # e.g., http://localhost:3000,http://localhost:5173
 
 # JWT Authentication
-JWT_SECRET=<your_jwt_secret>
-JWT_ALGORITHM=<your_jwt_algorithm>
-JWT_EXPIRATION=<your_jwt_expiration>
+JWT_SECRET=<JWT_SECRET>
+JWT_ALGORITHM=<JWT_ALGORITHM> # e.g., HS256
+JWT_EXPIRATION=<JWT_EXPIRATION_IN_SECONDS> # e.g., 86400
 
 # VAPI Settings
-VAPI_API_KEY=<your_vapi_api_key>
-VAPI_ASSISTANT_ID=<your_vapi_assistant_id>
-VAPI_DEMO_ASSISTANT_ID=<your_vapi_demo_assistant_id>
-VAPI_PHONE_NUMBER_ID=<your_vapi_phone_number_id>
-VAPI_WEBHOOK_SECRET=<your_vapi_webhook_secret>
-VAPI_WEBHOOK_URL=<your_vapi_webhook_url>
+VAPI_API_KEY=<VAPI_API_KEY>
+VAPI_ASSISTANT_ID=<VAPI_ASSISTANT_ID>
+VAPI_DEMO_ASSISTANT_ID=<VAPI_DEMO_ASSISTANT_ID>
+VAPI_PHONE_NUMBER_ID=<VAPI_PHONE_NUMBER_ID>
+VAPI_WEBHOOK_SECRET=<VAPI_WEBHOOK_SECRET>
+VAPI_WEBHOOK_URL=<VAPI_WEBHOOK_URL>
 
-OPENAI_API_KEY=<your_openai_api_key>
+# OpenAI Settings
+OPENAI_API_KEY=<OPENAI_API_KEY>
