--- a/server/.env.example
+++ b/server/.env.example
@@ -29,3 +29,16 @@ VAPI_WEBHOOK_URL=<VAPI_WEBHOOK_URL>
 
 # OpenAI Settings
 OPENAI_API_KEY=<OPENAI_API_KEY>
+
+# AnyLLM Additional Providers
+# For Anthropic Claude models
+ANTHROPIC_API_KEY=<ANTHROPIC_API_KEY>
+
+# For Mistral AI models
+MISTRAL_API_KEY=<MISTRAL_API_KEY>
+
+# For Groq models
+GROQ_API_KEY=<GROQ_API_KEY>
+
+# For Ollama (local models)
+OLLAMA_API_BASE=<OLLAMA_API_BASE> # Optional: defaults to http://localhost:11434
